hphp/test/slow/ext_mysql/T87817522.php.expectf

Catchable fatal error: Argument 8 to mysql_connect_with_ssl() must be of type ?MySSLContextProvider, stdClass given in %s on line 4
